--- a/05_OOP/PyOOP.ipynb
+++ b/05_OOP/PyOOP.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "ffc57ef2",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
      "text": [
       "Shape Constructor\n",
       "Circle Constructor\n",
-      "Area of shape\n"
+      "Area of circle is: 78.55\n"
      ]
     }
    ],
@@ -298,8 +298,9 @@
     "        Shape.__init__(self) #Calling parent constructor\n",
     "        self.radius = r\n",
     "        print(\"Circle Constructor\")\n",
-    "   # def  area(self):\n",
-    "  #      print(\"Area of circle is:\", 3.142*self.radius*self.radius)\n",
+    "    # try commenting out this and you will notice that the parent class area() takes over\n",
+    "    def  area(self):\n",
+    "        print(\"Area of circle is:\", 3.142*self.radius*self.radius)\n",
     "        \n",
     "c = Circle(5)\n",
     "c.area() #Circle class area method overrides Shape class area method"
@@ -401,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +416,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
