--- a/05_OOP/PyOOP.ipynb
+++ b/05_OOP/PyOOP.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "62c4bc33",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "list"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,12 +37,12 @@
     "# recall\n",
     "lst = [1,2,3,4,5,2,6,7,8,2]\n",
     "lst.count(2) # call the function count from the list object\n",
-    "type(lst) # all are objects in python"
+    "type(lst) # all are objects in python\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "6efedf0a",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,18 @@
     "# Instance of Sample\n",
     "x = Sample()\n",
     "\n",
-    "print(type(x))"
+    "print(type(x))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1552d83",
+   "metadata": {},
+   "source": [
+    "###  self Parameter\n",
+    "The variables defined have the prefix self.\n",
+    "i. Any variable prefixed with self indicates the variable is available to every method in the class.\n",
+    "ii. It is used to access variables that belong to the class."
    ]
   },
   {
@@ -112,23 +123,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1552d83",
-   "metadata": {},
-   "source": [
-    "###  self Parameter\n",
-    "The variables defined have the prefix self.\n",
-    "i. Any variable prefixed with self indicates the variable is available to every method in the class.\n",
-    "ii. It is used to access variables that belong to the class."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b85a2947",
    "metadata": {},
    "source": [
     "## Methods\n",
     "\n",
     "Functions defined inside the body of a class that perform operations with the attributes of the objects. Functions that act on an Object that take the Object itself into account through its *self* argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5b618655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Audi A4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Car example\n",
+    "\n",
+    "class Car:\n",
+    "# A simple attempt to represent a car.\n",
+    "\n",
+    "    def __init__(self, make, model, year):\n",
+    "        #Initialize attributes to describe a car.\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "    \n",
+    "    def getDescriptive(self):\n",
+    "        # Return a neatly formatted descriptive name.\"\"\"\n",
+    "        long_name = f\"{self.year} {self.make} {self.model}\"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "newCar = Car('Audi', 'A4', 2019)\n",
+    "print(newCar.getDescriptive())"
    ]
   },
   {
@@ -148,23 +183,24 @@
     }
    ],
    "source": [
-    "# a Circle class:\n",
+    "# Circle class Example\n",
+    "\n",
     "import math\n",
     "\n",
     "class Circle:\n",
     "    pi = math.pi\n",
     "\n",
-    "    # Circle gets instantiated with a radius (default is 1)\n",
-    "    def __init__(self, radius=1):\n",
+    "    # Circle instantiated with a radius (default is 2)\n",
+    "    def __init__(self, radius=2):\n",
     "        self.radius = radius \n",
     "        self.area = radius * radius * Circle.pi\n",
     "\n",
-    "    # Method for resetting Radius\n",
+    "    # resetting Radius\n",
     "    def setRadius(self, new_radius):\n",
     "        self.radius = new_radius\n",
     "        self.area = new_radius * new_radius * self.pi # work with an existing Circle object that does have its own pi attribute\n",
     "\n",
-    "    # Method for getting Circumference\n",
+    "    # getting Circumference\n",
     "    def getCircumference(self):\n",
     "        return self.radius * self.pi * 2\n",
     "\n",
@@ -211,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "042f4ca5",
    "metadata": {},
    "outputs": [
@@ -219,18 +255,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape Constructor\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "area() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/w6/0wcwstvj4nj1gk_15vpb92gr0000gp/T/ipykernel_72003/2558501679.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mShape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: area() takes 0 positional arguments but 1 was given"
+      "Shape Constructor\n",
+      "Circle Constructor\n",
+      "Area of circle is: 78.55\n",
+      "Circle Constructor\n"
      ]
     }
    ],
@@ -249,9 +277,10 @@
     "        self.radius = r\n",
     "        print(\"Circle Constructor\")\n",
     "    def area(self): \n",
-    "        print(\"Area of circle is:\", 3.142*self.radius*self.radius)\n",
+    "        print(\"Area of circle is:\", 3.142* self.radius* self.radius)\n",
+    "        print(\"Circle Constructor\")\n",
     "            \n",
-    "c = Shape()\n",
+    "c = Circle(5)\n",
     "c.area()\n"
    ]
   },
@@ -338,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "736e43ce",
    "metadata": {},
    "outputs": [
@@ -346,34 +375,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified feature_1 of class A by class B\n"
+      "I am One of B\n"
      ]
     }
    ],
    "source": [
     "class A:\n",
-    "\n",
+    "    \n",
     "    def method1(self):\n",
-    "        print('feature_1 of class A')\n",
+    "        print(\"I am One A\")\n",
     "\n",
     "    def method2(self):\n",
-    "        print('feature_2 of class A')\n",
-    "\n",
-    "class B(A):\n",
-    "    # Modified function that is already exist in class A\n",
-    "\n",
-    "    def method1(self):\n",
-    "        print('Modified feature_1 of class A by class B')\n",
+    "        print(\"I am TWO A\")\n",
     "        \n",
+    "class B(A):\n",
+    "    # methods that already do exist in the parent class A\n",
+    "    def method1(self):\n",
+    "        print(\"I am One of B\")\n",
+    "\n",
     "    def method2(self):\n",
-    "        print('feature_3 of class B')\n",
+    "        print(\"I am TWO of B\")\n",
+    "    \n",
+    "x = B()\n",
     "\n",
-    "# Create instance\n",
-    "b = B()\n",
-    "\n",
-    "# Call the override function\n",
-    "b.method1()\n",
-    "\n"
+    "# calling the override method\n",
+    "x.method1()"
    ]
   },
   {
@@ -383,26 +409,27 @@
    "source": [
     "## Exercise 7\n",
     "\n",
+    "#### Question 1\n",
+    "\n",
     "Implement a class called Team that stores and manipulates information about a competitive team (e.g., soccer, debate, baseball). Each team keeps track of its name, year, city, wins, and losses. In addition:\n",
     "- The constructor should take parameters for the name, year, and city. It should initializes the number of wins and losses to 0.\n",
     "- Write a method to create a string summarizing the team’s data (e.g., \"2018 Arsenal: 12 wins, 0 losses\")\n",
     "- Have a method wonGame that increments the team’s number of wins by 1.\n",
     "- Similarly, have a lostGame that updates the number of losses.\n",
-    "- Write a method, getWinPercent that returns the percentage of games won out of the total number of games played. If a team has played 0 games, return a winning percentage of 0%. If a team has won 3 out of 4 games, return a winning percentage of 75%."
+    "- Write a method, getWinPercent that returns the percentage of games won out of the total number of games played. If a team has played 0 games, return a winning percentage of 0%. If a team has won 3 out of 4 games, return a winning percentage of 75%.\n",
+    "\n",
+    "#### Question 2\n",
+    "\n",
+    "Design a class named Rectangle to represent a rectangle containing two data fields named width and height and the following:\n",
+    "-\tA constructor that creates a rectangle with the specified width and height. The default values are 1 and 2 for the width and height, respectively.\n",
+    "-\tA method named getArea() that returns the area and a method named getPerimeter() that returns the perimeter of the rectangle.\n",
+    "Write a test program that creates two Rectangle objects of width 3 and height 30 and the other with width 4.5 and height 45.5. The output should display the width, height, area, perimeter of each rectangle and the ratio by how much area one is larger than other.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba081a33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
